# elpis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: android.yml  web.yml
apps/elpis-android/: Cargo.toml
apps/elpis-android/android/: build.gradle.kts  settings.gradle.kts
apps/elpis-android/android/app/: build.gradle.kts
apps/elpis-android/android/app/src/main/: AndroidManifest.xml
apps/elpis-android/src/: lib.rs
apps/elpis-app/: Cargo.toml
apps/elpis-app/src/: main.rs
apps/elpis-web/: Cargo.toml  index.html  material.html
apps/elpis-web/assets/: NOTICE.md
apps/elpis-web/src/: lib.rs
crates/elpian-vm/: Cargo.toml
crates/elpian-vm/src/: api.rs  lib.rs
crates/elpian-vm/src/sdk/: compiler.rs  data.rs  executor.rs  mod.rs  program.rs  stdlib.rs  vm.rs
crates/elpian-vm/tests/: js_compiler.rs  js_conformance.rs  js_new_features.rs
crates/elpis-blinc/: Cargo.toml
crates/elpis-blinc/src/: blinc_backend.rs  lib.rs  lower.rs  scene.rs
crates/elpis-host/: Cargo.toml
crates/elpis-host/src/: backend.rs  bridge.rs  event.rs  lib.rs  prelude.js  tests.rs
crates/elpis-protocol/: Cargo.toml
crates/elpis-protocol/src/: animation.rs  canvas.rs  diff.rs  hostcall.rs  lib.rs  node.rs  scene3d.rs  style.rs
miniapps/counter/: app.js
miniapps/glass-gallery/: app.js
miniapps/material-gallery/: app.js
miniapps/showcase/: app.js
sdk/: glass-ui-kit.js  material-ui-kit.js
