[workspace]
resolver = "2"
members = [
    "crates/elpian-vm",
    "crates/elpis-protocol",
    "crates/elpis-host",
    "crates/elpis-blinc",
    "apps/elpis-app",
]

# The real blinc renderer (wgpu, wayland, etc.) is heavy and pulled only when
# the `blinc-backend` feature of `elpis-blinc` is enabled. The default
# workspace build uses the headless backend so `cargo build`/`cargo test`
# stays fast and self-contained.

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cosmopole-org/elpis"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

# Internal crates.
elpian-vm = { path = "crates/elpian-vm" }
elpis-protocol = { path = "crates/elpis-protocol" }
elpis-host = { path = "crates/elpis-host" }
elpis-blinc = { path = "crates/elpis-blinc" }

# Blinc UI framework (https://github.com/project-blinc/Blinc). Pulled in only
# by `elpis-blinc` when its `blinc-backend` feature is enabled.
blinc_app = "0.5"
blinc_core = "0.5"
blinc_layout = "0.5"
blinc_animation = "0.5"
blinc_theme = "0.5"
blinc_router = "0.5"
blinc_svg = "0.5"
blinc_image = "0.5"
blinc_text = "0.5"
blinc_paint = "0.5"
blinc_platform = "0.5"
