[workspace]
resolver = "2"
members = [
    "crates/elpian-vm",
    "crates/elpis-protocol",
    "crates/elpis-host",
    "crates/elpis-blinc",
    "apps/elpis-app",
    "apps/elpis-web",
    "apps/elpis-android",
]

# The real blinc renderer (wgpu, wayland, etc.) is heavy and pulled only when
# the `blinc-backend` feature of `elpis-blinc` is enabled. The default
# workspace build uses the headless backend so `cargo build`/`cargo test`
# stays fast and self-contained.

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/cosmopole-org/elpis"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
# `std::time` shim that also compiles for `wasm32-unknown-unknown` (backs the
# clock with `Date.now()`/`performance.now()` there; a plain re-export of
# `std::time` everywhere else). Used by `elpis-host` so the web demo's clock
# doesn't panic at boot. Already present transitively via Blinc.
web-time = "1.1"

# Internal crates.
elpian-vm = { path = "crates/elpian-vm" }
elpis-protocol = { path = "crates/elpis-protocol" }
elpis-host = { path = "crates/elpis-host" }
elpis-blinc = { path = "crates/elpis-blinc" }

# Blinc UI framework (https://github.com/project-blinc/Blinc). Pulled in only
# by `elpis-blinc` when its `blinc-backend` feature is enabled.
#
# `default-features = false` drops the desktop convenience surfaces (file
# dialogs, tray, notifications, hotkeys) whose gtk/dbus transitive trees need
# system libraries (pango, gdk-pixbuf) that aren't present in minimal/CI
# environments. The platform runner (windowed / web / android) is selected by
# the consuming crate's feature, so none is pinned here.
blinc_app = { version = "0.5", default-features = false }
blinc_platform_android = "0.5"
blinc_core = "0.5"
blinc_layout = "0.5"
blinc_animation = "0.5"
blinc_theme = "0.5"
blinc_router = "0.5"
blinc_svg = "0.5"
blinc_image = "0.5"
blinc_text = "0.5"
blinc_paint = "0.5"
blinc_platform = "0.5"
