[package]
name = "elpis-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web (wasm32) build of the Elpis demo: runs the showcase Miniapp on the elpian-vm and renders it with Blinc's WebGPU backend in the browser."
publish = false

[lib]
# `cdylib` is what wasm-pack needs to emit a `.wasm` artifact + JS shim.
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--all-features']

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

# Strictly a wasm32 demo: a native build links an empty cdylib. The target gate
# keeps `cargo build --workspace` on desktop/CI from pulling the wasm/Blinc-web
# stack — the lib is empty off wasm32 (see the `#![cfg]` in src/lib.rs).
[target.'cfg(target_arch = "wasm32")'.dependencies]
elpis-host = { workspace = true }
elpis-blinc = { workspace = true, features = ["blinc-backend"] }
blinc_app = { workspace = true, default-features = false, features = ["web"] }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
