[package]
name = "elpis-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web (wasm32) build of the Elpis demo: runs a Miniapp gallery (Glass UI kit by default, or the Material UI kit with --features material_demo) on the elpian-vm and renders it with Blinc's WebGPU backend in the browser."
publish = false

[lib]
# `cdylib` is what wasm-pack needs to emit a `.wasm` artifact + JS shim.
crate-type = ["cdylib", "rlib"]

[features]
# Bundle the Material UI kit gallery instead of the default Glass gallery.
# The workflow (`.github/workflows/web.yml`) builds both, into `pkg/` and
# `pkg-material/`, so both demos are reachable from the deployed site
# (index.html / material.html).
material_demo = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--all-features']

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

# Strictly a wasm32 demo: a native build links an empty cdylib. The target gate
# keeps `cargo build --workspace` on desktop/CI from pulling the wasm/Blinc-web
# stack — the lib is empty off wasm32 (see the `#![cfg]` in src/lib.rs).
[target.'cfg(target_arch = "wasm32")'.dependencies]
elpis-host = { workspace = true }
elpis-blinc = { workspace = true, features = ["blinc-backend"] }
blinc_app = { workspace = true, default-features = false, features = ["web"] }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
