[package]
name = "elpian-vm"
version = "0.1.0"
edition = "2021"
description = "Elpian AST-based bytecode VM. Compiles a JS-derived AST JSON into a compact bytecode stream and executes it, yielding host calls (e.g. `render`) to the embedding runtime."

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
