[package]
name = "elpis-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Elpis sandbox host: instantiates an elpian-vm, runs a Miniapp written in JS, and bridges its askHost UI calls (ui.render, ui.patch, anim.*, canvas.*, scene3d.*, theme.*, router.*, media.*, storage.*, host.*) to a pluggable UI backend, maintaining a retained widget tree and routing UI events back into the VM."

[dependencies]
elpian-vm = { workspace = true }
elpis-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# A `std::time` shim that also works on `wasm32-unknown-unknown`: on native it
# re-exports `std::time` unchanged, but on wasm it backs `SystemTime`/`Instant`
# with the browser's `Date.now()`/`performance.now()`. Bare `std::time` panics
# on wasm ("time not implemented on this platform"), which crashed the web demo
# at sandbox boot before the first frame. Already in the tree via Blinc.
web-time = { workspace = true }
